# TactileBrowser

./: .gitignore  .gitmodules  README.md  TODO.md
.github/actions/desktop/: action.yml
.github/actions/download-latest-sdk/: action.yml
.github/actions/macos/: action.yml
.github/actions/pocketmage/: action.yml  pocketmage_build.yml
.github/actions/tactility/: action.yml
.github/actions/wasm/: action.yml
.github/workflows/: autobuild.yml
desktop-src/: CMakeLists.txt  lv_conf.h
desktop-src/main/: CMakeLists.txt
desktop-src/main/Source/: main.cpp
pocketmage-src/: .clang-format  browser.tar  build_lexbor.py  lexbor_build.py  platformio.ini
pocketmage-src/include/: assets.h  config.h  globals.h  lv_conf.h  pocketmage.h
pocketmage-src/include/Fonts/: Font3x7FixedNum.h  Font4x5Fixed.h  Font5x7Fixed.h
pocketmage-src/latest/: browser.tar
pocketmage-src/lib/: tactilebrowser_core
pocketmage-src/lib/pocketmage_buzzer/include/: pocketmage_bz.h
pocketmage-src/lib/pocketmage_buzzer/src/: pocketmage_bz.cpp
pocketmage-src/lib/pocketmage_clock/include/: pocketmage_clock.h
pocketmage-src/lib/pocketmage_clock/src/: pocketmage_clock.cpp
pocketmage-src/lib/pocketmage_eink/include/: pocketmage_eink.h
pocketmage-src/lib/pocketmage_eink/src/: pocketmage_eink.cpp
pocketmage-src/lib/pocketmage_kb/include/: pocketmage_kb.h
pocketmage-src/lib/pocketmage_kb/src/: pocketmage_kb.cpp
pocketmage-src/lib/pocketmage_oled/include/: pocketmage_oled.h
pocketmage-src/lib/pocketmage_oled/src/: pocketmage_oled.cpp
pocketmage-src/lib/pocketmage_sd/include/: pocketmage_sd.h
pocketmage-src/lib/pocketmage_sd/src/: pocketmage_sd.cpp
pocketmage-src/lib/pocketmage_sys/include/: pocketmage_sys.h
pocketmage-src/lib/pocketmage_sys/src/: pocketmage_sys.cpp
pocketmage-src/lib/pocketmage_touch/include/: pocketmage_touch.h
pocketmage-src/lib/pocketmage_touch/src/: pocketmage_touch.cpp
pocketmage-src/src/: BROWSER.cpp  assets.cpp  frameFunc.cpp  globals.cpp
pocketmage-src/src/setup/: buzzerSetup.cpp  clockSetup.cpp  einkSetup.cpp  kbSetup.cpp  oledSetup.cpp  sdSetup.cpp  sysSetup.cpp  touchSetup.cpp
src/: CMakeLists.txt  manifest.properties  sdkconfig
src/.tactility/: sdk.json
src/main/: CMakeLists.txt
src/main/Source/: main.c
tactilebrowser_core/: CMakeLists.txt  lexbor_build.py  library.json
tactilebrowser_core/include/: common_types.h  dom_renderer.h  html_parser.h  tactilebrowser_core.h
tactilebrowser_core/src/: dom_renderer.cpp  html_parser.cpp  tactilebrowser_core.cpp
tactility-src/: download.sh  manifest.properties  tactility.py
tactility-src/main/: CMakeLists.txt
tactility-src/main/Source/: lvgl_renderer.cpp  lvgl_renderer.h  main.cpp
wasm-src/: CMakeLists.txt  lv_conf.h
wasm-src/Sounce/: CMakeLists.txt  main.cpp
wasm-src/main/: CMakeLists.txt
wasm-src/main/Source/: glue.js  index.html  main.cpp
wasm-src/main/public/: index.html
